added models for exploring steam reviews

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -38,8 +38,12 @@ models:
       +materialized: table
       pokemon:
         +schema: pokemon
+      steam:
+        +schema: steam
     analytics:
       +database: analytics
       +materialized: view
       pokemon:
         +schema: pokemon
+      steam:
+        +schema: steam
